# avxLLM-local-inference

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  mac.plan.md  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
adapters/: README.md
apis/: CMakeLists.txt
apis/python/: CMakeLists.txt  bindings.cc
checkpoints/: README.md
cmake/modules/: DetectCPU.cmake
cmake/toolchains/: clang17.cmake
configs/: benchmark_sample.json  pretrain_example.json  rl_example.json  rl_tiny.json  sample_assets.json  sft_example.json  sft_math.json  sft_mcq.json
data/: distill_math.jsonl  distill_mcq.jsonl  distill_pairs.jsonl  math_prompts.jsonl  wiki_subset.jsonl
docs/: CMakeLists.txt  ONBOARDING.md  benchmark_roadmap.md  benchmark_usage.md  benchmarks.md  blog_best_of_n.md  bon_blog_notes.md  ci_setup.md  cpu_peft_plan.md  design.md  engine_open_questions.md  engine_roadmap.md  engine_vision.md  kernel_overlap_notes.md  lab_review_checklist.md  mac_setup.md  perf_metrics.md  prepost_playbook.md  quant.md  quickstart_pipeline.md  rust_speedups.md  throughput_playbook.md  training.md
engine/: CMakeLists.txt
engine/adapters/: lora_loader.cc
engine/include/infeng/adapters/: lora_loader.h
engine/include/infeng/kernels/attn/: decode.h  kv_dequant.h  rope_fht.h  softmax_mx.h
engine/include/infeng/kernels/gemm/: fused_base_lora.h  pack.h
engine/include/infeng/kernels/ref/: gemm_ref.h
engine/include/infeng/mem/: arena.h  kv_paged.h
engine/include/infeng/quant/: dequantize.h  infq_reader.h
engine/include/infeng/quant/packers/: int4_rowwise.h  int8_rowwise.h
engine/include/infeng/runtime/: affinity.h  cpu_lora_engine.h  microbatch.h  queues.h  runtime.h  scheduler.h
engine/include/infeng/telemetry/: counters.h
engine/include/infeng/tokenizer/: tokenizer.h
engine/kernels/attn/: decode_int8_qk_avx512.cc  kv_dequant_blocked.cc  rope_fht_kv_avx512.cc  softmax_mx.cc
engine/kernels/gemm/: fused_base_lora_avx2.ispc  fused_base_lora_avx512.cc  pack.cc
engine/kernels/ref/: attention_ref.cpp  gemm_ref.cpp
engine/mem/: arena.cc  kv_paged.cc
engine/quant/: dequantize.cc
engine/quant/loaders/: infq_reader.cc
engine/quant/packers/: int4_rowwise.cc  int8_rowwise.cc
engine/runtime/: affinity.cc  cpu_lora_engine.cc  microbatch.cc  runtime_init.cc  scheduler.cc
engine/telemetry/: counters.cc
engine/tokenizer/: Cargo.toml  c_api.h  tokenizer.cpp
engine/tokenizer/src/: lib.rs
examples/rewards/: exact_match.py
formats/INFQ/: spec.md
models/: README.md
projects/: __init__.py
projects/bon_emergence/: README.md  __init__.py  analyze.py  collector.py  distill.py  predictor.py  prompts.json  prompts.jsonl  prompts_all.jsonl  scorer.py  viz.py
reports/: attn_decode.csv  attn_decode_relwithdeb.csv  attn_decode_summary.json  attn_prefill.csv  attn_prefill_summary.json  baseline_cpu_throughput.md  benchmark_matrix.json  benchmark_summary.md  benchmark_tokens.csv  gemm_lora.csv  gemm_summary.json  overlap_experiment.md  perf_report.md  sched_zipf.csv  sched_zipf_summary.json  scheduler_metrics.csv  tokenizer.csv  tokenizer_py.csv
reports/bon_runs/: bon_run_20251030T031552Z.jsonl  bon_run_20251030T033054Z.jsonl  bon_run_20251030T033236Z.jsonl  bon_run_20251030T035614Z.jsonl  bon_run_synthetic_base.jsonl  bon_run_synthetic_distill.jsonl  summary.json  summary_base.json  summary_curated_base.json  summary_curated_distill.json  summary_distill.json
reports/bon_runs_curated/: bon_predictor.pkl  bon_run_curated_base.jsonl  bon_run_curated_distill.jsonl  summary.json
reports/bon_runs_math/: bon_run_20251102T191508Z.jsonl  bon_run_20251102T192118Z.jsonl  bon_run_20251102T200453Z.jsonl  bon_run_20251102T201759Z.jsonl  bon_run_20251102T203024Z.jsonl  bon_run_20251102T204306Z.jsonl  bon_run_20251102T212514Z.jsonl  bon_run_curated_base.jsonl  summary_latest.json
reports/bon_runs_math_adapter/: bon_run_20251102T192406Z.jsonl  bon_run_20251102T192615Z.jsonl  bon_run_20251102T193014Z.jsonl  bon_run_curated_adapter.jsonl  summary_latest.json
reports/bon_runs_math_curated/: bon_predictor.pkl
reports/bon_runs_math_viz/: summary.json
reports/bon_runs_mcq_adapter/: bon_run_20251030T044343Z.jsonl  summary.json  summary_latest.json
reports/bon_runs_mcq_base/: bon_run_20251030T042851Z.jsonl  bon_run_20251030T043207Z.jsonl  bon_run_20251030T043600Z.jsonl  summary.json  summary_latest.json
reports/bon_runs_mcq_curated/: bon_predictor.pkl  bon_run_20251030T043910Z.jsonl  bon_run_20251030T044800Z.jsonl
reports/bon_runs_mcq_curated_latest/: adapter_fp16_fallback.jsonl  base_fp16_fallback.jsonl  bon_predictor.pkl
reports/bon_runs_mcq_viz/: summary.json
reports/bon_runs_synthetic/: bon_predictor.pkl  bon_run_synthetic_base.jsonl  bon_run_synthetic_distill.jsonl
scripts/: benchmark.py  blend_lora_adapters.py  check_mac_env.py  download_manifest.py  generate_perf_dashboard.py  plot_benchmarks.py  run_benchmark_matrix.py  run_ci_smoke.py  run_end_to_end.py  run_llama_compare.py  run_local_eval.py  run_local_inference.py  run_local_pretrain.py  run_local_training.py  run_prompt_benchmark.py  run_rl_demo.py  run_rl_eval.py  run_telemetry_matrix.py  run_throughput_sweep.py  summarize_tokenizer_perf.py
src/peft_cpu_runtime/: __init__.py  cli.py  (+2 more)
tests/: CMakeLists.txt  infq_converter_test.py  test_attn_decode.cc  test_cpu_lora_engine.cc  test_fused_gemm.cc  test_infq_loader.cc  test_kv_paged.cc  test_rope_fht.cc  test_scheduler_basic.cc  test_scheduler_metrics.cc  test_scheduler_smoke.cc  test_scheduler_zipf.cc  test_tokenizer_golden.cc  tokenizer_golden_data.h
tests/data/: test_tokenizer.json  tokenizer_golden.json  tokenizer_prompts.txt
tools/: CMakeLists.txt  download_assets.py
tools/bench/: CMakeLists.txt  bench_attn_decode.cc  bench_attn_prefill.cc  bench_gemm_lora.cc  bench_scheduler_zipf.cc  bench_stub.cc  bench_tokenizer.cc  bench_tokenizer_gb.cc  compare_tokenizers.py  prompts.txt  python_tokenizer_baseline.py
tools/perf/cpp/: CMakeLists.txt  attn_decode_runner.cc  sched_zipf_runner.cc
(+48 files in other folders)
